selection color based of primary

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 ::selection {
-  background: theme("colors.pink.300");
+  background: theme("colors.primary.300");
 }
 
 .app-container {
