--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -2,10 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("./cards.scss");
-@import url("./calculator.scss");
-@import url("./markdown.scss");
-
 ::selection {
   background: theme("colors.primary.500");
   color: white;
@@ -40,4 +36,10 @@
   .footer {
     grid-area: footer;
   }
+}
+
+.long-title {
+  word-spacing: 600px;
+  line-height: 1;
+  font-size: 0.8125rem;
 }
