published data doesn't really have dates for now

--- a/assets/styles/cards.scss
+++ b/assets/styles/cards.scss
@@ -24,8 +24,8 @@
       @apply mx-6;
     }
 
-    &-item + &-item {
-      margin-top: 0 !important;
-    }
+    // &-item + &-item {
+    //   margin-top: 0 !important;
+    // }
   }
 }
