im done suffering, going back to nuxt
 - data files are preserved
 - public directory is preserved
 - webp generation script is preserved

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("./cards.scss");
+@import url("./calculator.scss");
+@import url("./markdown.scss");
+
 ::selection {
   background: theme("colors.primary.500");
   color: white;
@@ -36,10 +40,4 @@
   .footer {
     grid-area: footer;
   }
-}
-
-.long-title {
-  word-spacing: 600px;
-  line-height: 1;
-  font-size: 0.8125rem;
 }
