--- a/assets/styles/cards.scss
+++ b/assets/styles/cards.scss
@@ -1,6 +1,12 @@
 .card {
   @apply bg-white dark:bg-neutral-800 rounded-lg box-border border border-neutral-200 dark:border-neutral-200/10 flex;
 
+  &-long-title {
+    word-spacing: 600px;
+    line-height: 1;
+    font-size: 0.8125rem;
+  }
+
   &-horizontal {
     @apply flex-row;
   }
