--- a/assets/styles/cards.scss
+++ b/assets/styles/cards.scss
@@ -1,5 +1,5 @@
 .card {
-  @apply bg-white dark:bg-neutral-800 rounded-lg box-border border border-neutral-200 dark:border-neutral-200/10 flex;
+  @apply bg-white dark:bg-neutral-800 rounded-lg box-border border border-neutral-200 dark:border-neutral-200/10 flex text-[.9rem];
 
   &-long-title {
     word-spacing: 600px;
