--- a/assets/styles/calculator.scss
+++ b/assets/styles/calculator.scss
@@ -1,5 +1,5 @@
 .calculator {
-  @apply bg-white dark:bg-neutral-800 rounded-lg box-border border border-neutral-200 dark:border-neutral-200/10 p-4 flex flex-col;
+  @apply bg-white dark:bg-dark-800 rounded-lg box-border border border-neutral-200 dark:border-dark-200/10 p-4 flex flex-col;
 
   &-title {
     @apply font-semibold text-3xl;
@@ -10,7 +10,7 @@
   } 
 
   &-input {
-    @apply leading-6 dark:text-neutral-300 placeholder:text-neutral-400 accent-primary-500 rounded-md ring-1 bg-neutral-50 dark:bg-neutral-900 ring-neutral-900/10 dark:ring-neutral-50/10 shadow-sm py-1.5 pl-2 pr-3;
+    @apply leading-6 dark:text-dark-300 placeholder:text-neutral-400 dark:placeholder:text-dark-400  accent-primary-500 rounded-md ring-1 bg-neutral-50 dark:bg-dark-900 ring-neutral-900/10 dark:ring-dark-50/10 shadow-sm py-1.5 pl-2 pr-3;
   }
 
   &-input + &-input {
