--- a/assets/styles/cards.scss
+++ b/assets/styles/cards.scss
@@ -1,5 +1,5 @@
 .card {
-  @apply bg-white dark:bg-neutral-800 rounded-lg box-border border border-neutral-200 dark:border-neutral-200/10 flex text-[.9rem];
+  @apply bg-white dark:bg-dark-800 rounded-lg box-border border border-neutral-200 dark:border-dark-200/10 flex text-[.9rem];
 
   // this is needed since parent is masonry layout
   @apply break-inside-avoid break-before-auto break-after-auto;
