--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --mobile-navbar-height: theme("height.16");
+}
+
 ::selection {
   background: theme("colors.primary.500");
   color: white;
