--- a/assets/styles/markdown.scss
+++ b/assets/styles/markdown.scss
@@ -57,7 +57,7 @@
 
   ol,
   ul {
-    @apply pl-4 marker:text-sky-500;
+    @apply pl-4 marker:text-sky-600 dark:marker:text-sky-500;
   }
 
   li + li {
