refactor(styles, cards): udpated cards base and removed redundant classes

--- a/src/assets/styles/cards.scss
+++ b/src/assets/styles/cards.scss
@@ -1,5 +1,9 @@
 .card {
-  @apply dark:text-dark-200 bg-white dark:bg-dark-900 rounded-lg box-border border border-neutral-200 dark:border-dark-200/10 flex text-[.9rem];
+  @apply flex box-border rounded-lg border border-neutral-200 dark:border-dark-800 bg-white dark:bg-dark-900;
+
+  &-with-padding {
+    @apply p-4;
+  }
 
   // this is needed since parent is masonry layout
   @apply break-inside-avoid break-before-auto break-after-auto;
