feat(markdown, styles): bring back darker texts

--- a/src/assets/styles/markdown.scss
+++ b/src/assets/styles/markdown.scss
@@ -1,13 +1,11 @@
 .md-body {
-  @apply dark:text-dark-300;
-
   h1,
   h2,
   h3,
   h4,
   h5,
   h6 {
-    @apply font-semibold mt-6 mb-4 dark:text-dark-200;
+    @apply font-semibold mt-6 mb-4 dark:text-dark-300;
   }
 
   h1 {
@@ -59,7 +57,7 @@
 
   ol,
   ul {
-    @apply pl-4 marker:text-sky-600 dark:marker:text-sky-500;
+    @apply pl-4 marker:text-primary-500;
   }
 
   li + li {
