--- a/src/assets/styles/markdown.scss
+++ b/src/assets/styles/markdown.scss
@@ -47,6 +47,19 @@
     @apply mt-0 mb-4;
   }
 
+  table {
+    @apply border-collapse border border-neutral-200 dark:border-dark-800 bg-white text-[#000] dark:bg-dark-900 dark:text-dark-300;
+  };
+
+  th {
+    @apply even:bg-black/5 dark:even:bg-white/5;
+  }
+
+  th,
+  td {
+    @apply table-auto p-2;
+  }
+
   ul {
     @apply list-disc;
   }
