--- a/src/assets/styles/markdown.scss
+++ b/src/assets/styles/markdown.scss
@@ -1,6 +1,18 @@
 .markdown-content {
+  table {
+    img {
+      margin: 0;
+    }
+  }
+
+  tr {
+    th {
+      @apply even:bg-neutral-200/40 dark:even:bg-dark-900/60;
+    }
+  }
+
   details {
-    @apply rounded-lg border-l-4 border-primary-500 bg-white dark:bg-dark-900 font-semibold text-[#000] dark:text-dark-200;
+    @apply rounded-lg border-l-4 border-primary-500 bg-white font-semibold text-[#000] dark:bg-dark-900 dark:text-dark-200;
 
     summary {
       cursor: pointer;
