feat(css): adjusted styles of lists in markdown content

--- a/src/assets/styles/markdown.scss
+++ b/src/assets/styles/markdown.scss
@@ -1,4 +1,13 @@
 .markdown-content {
+  p + ol,
+  p + ul {
+    margin-top: 0;
+  }
+
+  li + li {
+    margin-top: 0;
+  }
+
   table {
     img {
       margin: 0;
