--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -26,7 +26,7 @@
     grid-template-rows: 1fr auto;
     grid-template-areas:
       "sidebar main"
-      "sidebar footer";
+      "footer footer";
     margin-bottom: 0;
   }
 
