--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -69,4 +69,26 @@
     color: theme("colors.neutral.300");
     border-color: theme("colors.neutral.700");
   }
+
+  .input-field {
+    @apply form-input shadow-sm placeholder:text-gray-400 focus:ring-2 focus:ring-primary-500;
+
+    height: theme("height.10");
+    border-width: 1px;
+    border-radius: theme("borderRadius.md");
+    border-color: theme("colors.gray.200");
+    background-color: theme("colors.white");
+    font-size: theme("fontSize.sm");
+    line-height: theme("lineHeight.5");
+    color: theme("colors.black");
+
+  }
+
+  .dark .input-field {
+    @apply placeholder:text-neutral-500;
+
+    border-color: theme("colors.neutral.700");
+    background-color: theme("colors.neutral.800");
+    color: theme("colors.neutral.300");
+  }
 }
