--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -71,7 +71,7 @@
   }
 
   .input-field {
-    @apply form-input shadow-sm placeholder:text-gray-400 focus:ring-2 focus:ring-primary-500;
+    @apply form-input shadow-sm placeholder:text-gray-400 focus:ring-1 focus:ring-primary-500 focus:border-primary-500;
 
     height: theme("height.10");
     border-width: 1px;
