feat(components, css): moved contents table container classes into css so it's overridable

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -134,4 +134,8 @@
   .radio-button:hover {
     cursor: pointer;
   }
+
+  .contents-table-container {
+    @apply hidden flex-col space-y-1 lg:flex;
+  }
 }
