feat(css): added hover anmation to cards

--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -63,6 +63,12 @@
     border-width: 1px;
     border-radius: var(--default-radius);
     border-color: var(--default-border-color);
+
+    @apply transition-all duration-200;
+  }
+
+  .card-shadow {
+    @apply shadow-[0_8px_30px_rgba(0,0,0,.12)];
   }
 
   .input-field {
