feat(styles): at least gonna keep progressbar transitions

--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -5,6 +5,9 @@
 
 * {
   text-rendering: optimizeLegibility;
+}
+
+.app * {
   -moz-transition: none !important; /* firefox is just built different ok */
 }
 
