--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -100,7 +100,7 @@
     font-size: theme("fontSize.sm");
     height: theme("height.10");
     padding-left: var(--default-gap);
-    padding-right: var(--default-gap);
+    padding-right: 2.5rem
   }
 
   .textarea-field {
