--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -18,7 +18,7 @@
 :root {
   --header-height: theme("height.14");
   --h-screen-without-header: calc(100vh - var(--header-height));
-  --max-content-width: theme("maxWidth.6xl");
+  --max-content-width: theme("maxWidth.screen-xl");
   --default-gap: 1rem;
   --default-radius: 0.375rem;
   --default-border-color: theme("colors.neutral.200");
