--- a/app/styles/components.css
+++ b/app/styles/components.css
@@ -8,7 +8,8 @@
     grid-template-columns: repeat(1, minmax(0, 1fr));
 
     border-width: 1px;
-    border-radius: 8px;
+    border-radius: 6px;
+    border-color: var(--default-border-color);
 
     padding-left: 16px;
     padding-right: 16px;
@@ -35,4 +36,86 @@
     width: 24px;
   }
 
+  .button {
+    --bg-color: theme(colors.primary.500);
+
+    display: flex;
+    align-items: center;
+    line-height: 1;
+    height: 36px;
+    padding-left: 18px;
+    padding-right: 18px;
+    border-width: 1px;
+    border-radius: 8px;
+    border-color: var(--bg-color);
+    font-weight: 600;
+    font-size: 14px;
+    color: white;
+    background-color: var(--bg-color);
+  }
+
+  .button:hover {
+    --bg-color: theme(colors.primary.600);
+
+    background-color: var(--bg-color);
+    border-color: var(--bg-color);
+  }
+
+  .button:active {
+    transform: translateY(1px);
+  }
+
+  .button:disabled, .button:disabled:hover {
+    --bg-color: theme(colors.neutral.200);
+    color: theme(colors.neutral.400);
+  }
+
+  .button:disabled {
+    transform: none ;
+  }
+
+  .button-neutral {
+    --bg-color: theme(colors.neutral.800);
+  }
+
+  .button-neutral:hover {
+    --bg-color: theme(colors.neutral.900);
+  }
+
+  .button-danger {
+    --bg-color: theme(colors.red.800);
+  }
+
+  .button-danger:hover {
+    --bg-color: theme(colors.red.900);
+  }
+
+  .input {
+    min-height: theme(height.9);
+    font-size: theme(fontSize.sm);
+    border-color: theme(colors.gray.400);
+    border-width: 1px;
+    border-radius: var(--default-radius);
+    padding-left: 12px;
+    padding-right: 12px;
+    background-color: white;
+  }
+
+  .input:focus, .input:focus-visible {
+    outline: 0;
+    border-color: theme(colors.primary.500);
+  }
+
+  .input::placeholder {
+    color: theme(colors.gray.500);
+  }
+
+  .select {
+    @apply input;
+
+    appearance: none;
+    padding-left: 12px;
+    padding-right: 30px;
+    background-color: white;
+  }
 }
