--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -28,8 +28,8 @@ html {
   --h-screen-without-header: calc(100vh - var(--header-height));
   --max-content-width: theme("maxWidth.screen-xl");
   --default-gap: 1rem;
-  --default-radius: 8px;
-  --default-border-color: theme("colors.neutral.200");
+  --default-radius: 6px;
+  --default-border-color: theme("colors.gray.300");
 }
 
 @layer base {
@@ -40,8 +40,8 @@ html {
   }
 
   .dark .app {
-    background-color: theme("colors.neutral.900");
-    color: theme("colors.neutral.200");
+    background-color: theme(colors.dark.700);
+    color: theme(colors.neutral.100);
   }
 
   .header {
@@ -177,53 +177,5 @@ html {
 
   .radio-field:hover {
     cursor: pointer;
-  }
-
-  .button {
-    border-radius: var(--default-radius);
-    border-width: 1px;
-    border-color: black;
-    background-color: black;
-    color: white;
-    padding-left: theme("padding.3");
-    padding-right: theme("padding.3");
-    padding-top: theme("padding[1.5]");
-    padding-bottom: theme("padding[1.5]");
-
-    @apply text-sm font-medium transition-all duration-200;
-  }
-
-  .button:focus-visible {
-    @apply outline outline-2 outline-black outline-offset-2;
-  }
-
-  /* .dark .button {
-    box-sizing: border-box;
-    border-width: 2px;
-    border-color: theme(colors.blau.500);
-    background-color: theme(colors.blau.500);
-    color: white;
-  } */
-
-  .button:hover {
-    color: black;
-    background-color: white;
-  }
-
-  /* .dark .button:hover {
-    border-color: white;
-    background-color: transparent;
-    color: white;
-  } */
-
-  .button-danger {
-    @apply button;
-
-    border-color: theme("colors.red.500");
-    background-color: theme("colors.red.500");
-  }
-
-  .button-danger:hover {
-    color: theme("colors.red.500");
   }
 }
