--- a/app/styles/components.css
+++ b/app/styles/components.css
@@ -37,10 +37,11 @@
   }
 
   .button {
-    --bg-color: theme(colors.primary.500);
+    --bg-color: theme(colors.gray.800);
 
     display: flex;
     align-items: center;
+    justify-content: center;
     line-height: 1;
     height: 36px;
     padding-left: 18px;
@@ -55,7 +56,7 @@
   }
 
   .button:hover {
-    --bg-color: theme(colors.primary.600);
+    --bg-color: theme(colors.gray.900);
 
     background-color: var(--bg-color);
     border-color: var(--bg-color);
@@ -80,6 +81,14 @@
 
   .button-neutral:hover {
     --bg-color: theme(colors.neutral.900);
+  }
+
+  .button-primary {
+    --bg-color: theme(colors.primary.500);
+  }
+
+  .button-primary:hover {
+    --bg-color: theme(colors.primary.600);
   }
 
   .button-danger {
