feat(css):  images in posts are now rounded

--- a/app/styles/markdown.css
+++ b/app/styles/markdown.css
@@ -1,4 +1,8 @@
 @layer base {
+  .markdown-content img {
+    border-radius: theme(borderRadius.box);
+  }
+
   .markdown-content iframe {
     width: 100%;
     height: 100%;
